2008-06-23  Alberto Garcia  <agarcia@igalia.com>

	* examples/hildon-stackable-window-example.c
	* src/hildon-stackable-window.c
	* src/hildon-stackable-window.h
	hildon_stackable_window_go_home() renamed to
	hildon_stackable_window_go_to_root_window()

2008-06-19  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-pannable-area.c
	(hildon_pannable_area_button_release_cb): Fix overshooting in
	accel mode.

2008-06-19  Claudio Saavedra  <csaavedra@igalia.com>

	* src/hildon-pannable-area.c
	(hildon_pannable_area_init): Initially show the scroll indicators.
	(hildon_pannable_area_map): Fade the scroll indicators out upon mapping.

	Add initial effect showing the widget is pannable.

2008-06-19  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-pannable-area.c
	(hildon_pannable_area_class_init)
	(hildon_pannable_area_set_property)
	(hildon_pannable_area_get_property)
	(hildon_pannable_area_button_press_cb):
	New 'velocity_fast_factor' property to decide which velocity is
	considered fast.

2008-06-19  Claudio Saavedra  <csaavedra@igalia.com>

	* src/hildon-pannable-area.c
	(hildon_pannable_draw_hscroll)
	(hildon_pannable_draw_vscroll):
	Use float variables to calculate the size of the scrollbars to
	avoid error propagation and resizing during scrolling.

2008-06-19  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-pannable-area.c
	(hildon_pannable_draw_vscroll)
	(hildon_pannable_draw_hscroll):
	Define a minimum size for the scroll bars

	* src/hildon-stackable-window.c
	(hildon_stackable_window_go_home): Fix compilation warning
	(get_last_window): Minor optimizations
	(hildon_stackable_window_class_init): Fix initialization of
	private structure.

2008-06-18  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-stackable-window.c: Fixed typos in doc

2008-06-18  Claudio Saavedra  <csaavedra@igalia.com>

	* src/hildon-pannable-area.c
	(hildon_pannable_area_scroll):
	Calculate here whether we need to scroll instead of using the booleans